# popc

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README  README.md  RELEASES
.gitea/workflows/: ci.yml  mirror-release-to-github.yml
cmake/: popc.pc.in  popcConfig.cmake.in
include/: cluster.hpp  dataset.hpp  delimiter_ctype.hpp  popc.hpp
include/popc/: cluster.hpp  dataset.hpp  popc.hpp
include/popc/detail/: bitpacked_kmeans.hpp
src/: popc.cpp
test/: CMakeLists.txt  clusters.list  data.tsv  expected_output.list  test_bitpacked_kmeans.cpp  test_cluster.cpp  test_dataset.cpp  test_popc.cpp
